--- a/src/app/blog/post.module.scss
+++ b/src/app/blog/post.module.scss
@@ -38,7 +38,7 @@
   margin-top: 0.375rem;
 
   span {
-    color: var(--color-accent);
+    color: var(--color-accent-on-dark);
     margin-right: 0.5rem;
     font-size: 0.8125rem;
   }
@@ -58,11 +58,11 @@
   }
 
   a {
-    color: var(--color-accent);
-    text-decoration: none;
+    color: var(--color-accent-on-dark);
+    text-decoration: underline;
 
     &:hover {
-      text-decoration: underline;
+      color: var(--color-text-light);
     }
   }
 
@@ -144,10 +144,10 @@
 .readMore {
   display: inline-block;
   margin-top: 1rem;
-  color: var(--color-accent);
-  text-decoration: none;
+  color: var(--color-accent-on-dark);
+  text-decoration: underline;
 
   &:hover {
-    text-decoration: underline;
+    color: var(--color-text-light);
   }
 }
