--- a/src/components-next/NotifyForm/NotifyForm.module.scss
+++ b/src/components-next/NotifyForm/NotifyForm.module.scss
@@ -110,7 +110,7 @@
 
 .successMsg {
   font-size: 1rem;
-  color: var(--color-accent);
+  color: var(--color-accent-on-dark);
   font-weight: 600;
 
   &:focus {
