--- a/src/components-next/OperatorSection/OperatorSection.module.scss
+++ b/src/components-next/OperatorSection/OperatorSection.module.scss
@@ -32,7 +32,7 @@
 
 .statLabel {
   font-size: 0.8125rem;
-  color: var(--color-accent);
+  color: var(--color-accent-on-dark);
   line-height: 1.4;
   font-weight: 600;
 }
